# fr25012

./: .gitignore  CMakeLists.txt  README.md  README.txt
container/: Dockerfile  README.md  build.sh  connect_running.sh  start_interactive.sh
include/boomer2_tools/: CloudRenderer.hh  Descriptor.hh  Detector.hh  Features.hh  GraphBuilder.hh  Logger.hh
scripts/: test_command.sh
src/: CloudRenderer.cpp  Descriptor.cpp  Detector.cpp  GraphBuilder.cpp  LibtorchTest.cpp  Logger.cpp  TorchScriptCppTest.cpp  annotator.cpp  connect_graphs.cpp  convert_pytorch_model.py  matcher.cpp  model.py  model_eval.py  model_train.py  pts2pcd.cpp  pts2pcd.py  scan2origin.cpp  subsampler.cpp  test_features.cpp  test_load.cpp  test_logger.cpp
